@@ -93,7 +93,7 @@
                     <MenuItem Header="Properties" Command="{Binding CmdStationsPropertiesCommand}"/>
                 </MenuItem>
                 <MenuItem Header="Project">
-                    <MenuItem Header="Add View" Command="{Binding AddTrackCommand}"/>
+                    <MenuItem Header="Add Track View" Command="{Binding AddTrackCommand}"/>
                     <!--
                     <MenuItem Header="Remove Track" Command="{Binding RemoveTrackCommand}"/>
                     <Separator/>
