@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-              d:DesignWidth="600" d:DesignHeight="215"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:xamlMagic="clr-namespace:RailwayEssentialMdi.XamlMagic"
+             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="270"
              DataContextChanged="LocomotivesView_OnDataContextChanged">
     <Grid>
         <Grid.RowDefinitions>
@@ -13,81 +13,111 @@
             <RowDefinition Height="45"/>
         </Grid.RowDefinitions>
         <DockPanel Grid.Row="0" HorizontalAlignment="Stretch">
-            <Image Width="32" Height="32" HorizontalAlignment="Left" Margin="2,2,10,2" Source="/RailwayEssential;component/Resources/Main.ico"/>
+            <Image Width="32" Height="32" HorizontalAlignment="Left" Margin="2,2,10,2" 
+                   Source="{Binding Entity.LocomotiveIconImage}"/>
             <TextBox Text="{Binding Entity.Name, Mode=TwoWay}" FontWeight="Bold" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" MinWidth="50"/>
 
             <Label Content=" (" FontWeight="Bold" FontSize="12" FontStyle="Italic" VerticalAlignment="Center"/>
             <Label Content="{Binding Entity.ObjectItem.ObjectId}" FontWeight="Bold" FontSize="12" FontStyle="Italic" VerticalAlignment="Center"/>
             <Label Content=")" FontWeight="Bold" FontSize="12" FontStyle="Italic" VerticalAlignment="Center"/>
         </DockPanel>
-        <Grid Grid.Row="1" VerticalAlignment="Top" IsEnabled="{Binding Entity.IsEnabled}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="110"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0" Name="FncButtons">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>    
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
 
-                <ToggleButton Grid.Row="0" Grid.Column="0" Width="32" Height="32" Margin="0,2,0,2" Content="F0" Command="{Binding SwitchFncCommand}" CommandParameter="0"/>
-                <ToggleButton Grid.Row="0" Grid.Column="1" Width="32" Height="32" Margin="0,2,0,2" Content="F1" Command="{Binding SwitchFncCommand}" CommandParameter="1"/>
-                <ToggleButton Grid.Row="0" Grid.Column="2" Width="32" Height="32" Margin="0,2,0,2" Content="F2" Command="{Binding SwitchFncCommand}" CommandParameter="2"/>
-                <ToggleButton Grid.Row="0" Grid.Column="3" Width="32" Height="32" Margin="0,2,0,2" Content="F3" Command="{Binding SwitchFncCommand}" CommandParameter="3"/>
+        <TabControl Grid.Row="1" MinHeight="170">
+            <TabItem Header="Cruise">
+                <Grid VerticalAlignment="Top" IsEnabled="{Binding Entity.IsEnabled}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="110"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" Name="FncButtons">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
 
-                <ToggleButton Grid.Row="1" Grid.Column="0" Width="32" Height="32" Margin="0,2,0,2" Content="F4" Command="{Binding SwitchFncCommand}" CommandParameter="4"/>
-                <ToggleButton Grid.Row="1" Grid.Column="1" Width="32" Height="32" Margin="0,2,0,2" Content="F5" Command="{Binding SwitchFncCommand}" CommandParameter="5"/>
-                <ToggleButton Grid.Row="1" Grid.Column="2" Width="32" Height="32" Margin="0,2,0,2" Content="F6" Command="{Binding SwitchFncCommand}" CommandParameter="6"/>
-                <ToggleButton Grid.Row="1" Grid.Column="3" Width="32" Height="32" Margin="0,2,0,2" Content="F7" Command="{Binding SwitchFncCommand}" CommandParameter="7"/>
+                        <ToggleButton Grid.Row="0" Grid.Column="0" Width="32" Height="32" Margin="0,2,0,2" Content="F0" Command="{Binding SwitchFncCommand}" CommandParameter="0"/>
+                        <ToggleButton Grid.Row="0" Grid.Column="1" Width="32" Height="32" Margin="0,2,0,2" Content="F1" Command="{Binding SwitchFncCommand}" CommandParameter="1"/>
+                        <ToggleButton Grid.Row="0" Grid.Column="2" Width="32" Height="32" Margin="0,2,0,2" Content="F2" Command="{Binding SwitchFncCommand}" CommandParameter="2"/>
+                        <ToggleButton Grid.Row="0" Grid.Column="3" Width="32" Height="32" Margin="0,2,0,2" Content="F3" Command="{Binding SwitchFncCommand}" CommandParameter="3"/>
 
-                <ToggleButton Grid.Row="2" Grid.Column="0" Width="32" Height="32" Margin="0,2,0,2" Content="F8" Command="{Binding SwitchFncCommand}" CommandParameter="8"/>
-                <ToggleButton Grid.Row="2" Grid.Column="1" Width="32" Height="32" Margin="0,2,0,2" Content="F9" Command="{Binding SwitchFncCommand}" CommandParameter="9"/>
-                <ToggleButton Grid.Row="2" Grid.Column="2" Width="32" Height="32" Margin="0,2,0,2" Content="F10" Command="{Binding SwitchFncCommand}" CommandParameter="10"/>
-                <ToggleButton Grid.Row="2" Grid.Column="3" Width="32" Height="32" Margin="0,2,0,2" Content="F11" Command="{Binding SwitchFncCommand}" CommandParameter="11"/>
+                        <ToggleButton Grid.Row="1" Grid.Column="0" Width="32" Height="32" Margin="0,2,0,2" Content="F4" Command="{Binding SwitchFncCommand}" CommandParameter="4"/>
+                        <ToggleButton Grid.Row="1" Grid.Column="1" Width="32" Height="32" Margin="0,2,0,2" Content="F5" Command="{Binding SwitchFncCommand}" CommandParameter="5"/>
+                        <ToggleButton Grid.Row="1" Grid.Column="2" Width="32" Height="32" Margin="0,2,0,2" Content="F6" Command="{Binding SwitchFncCommand}" CommandParameter="6"/>
+                        <ToggleButton Grid.Row="1" Grid.Column="3" Width="32" Height="32" Margin="0,2,0,2" Content="F7" Command="{Binding SwitchFncCommand}" CommandParameter="7"/>
 
-            </Grid>
+                        <ToggleButton Grid.Row="2" Grid.Column="0" Width="32" Height="32" Margin="0,2,0,2" Content="F8" Command="{Binding SwitchFncCommand}" CommandParameter="8"/>
+                        <ToggleButton Grid.Row="2" Grid.Column="1" Width="32" Height="32" Margin="0,2,0,2" Content="F9" Command="{Binding SwitchFncCommand}" CommandParameter="9"/>
+                        <ToggleButton Grid.Row="2" Grid.Column="2" Width="32" Height="32" Margin="0,2,0,2" Content="F10" Command="{Binding SwitchFncCommand}" CommandParameter="10"/>
+                        <ToggleButton Grid.Row="2" Grid.Column="3" Width="32" Height="32" Margin="0,2,0,2" Content="F11" Command="{Binding SwitchFncCommand}" CommandParameter="11"/>
 
-            <DockPanel Grid.Column="1" HorizontalAlignment="Stretch" Margin="10, 0, 10, 10">
-                <Slider Name="SpeedSlider" Orientation="Vertical" Margin="2,2,2,2" Minimum="0" Maximum="100" Value="{Binding Entity.ObjectItem.Speed, Mode=OneWay}" ValueChanged="SpeedSlider_OnValueChanged" 
+                    </Grid>
+
+                    <DockPanel Grid.Column="1" HorizontalAlignment="Stretch" Margin="10, 0, 10, 10">
+                        <Slider Name="SpeedSlider" Orientation="Vertical" Margin="2,2,2,2" Minimum="0" Maximum="100" Value="{Binding Entity.ObjectItem.Speed, Mode=OneWay}" ValueChanged="SpeedSlider_OnValueChanged" 
                         Thumb.DragCompleted="SpeedSlider_OnDragCompleted"/>
-                <StackPanel>
-                    <TextBox Width="50" FontWeight="Bold" HorizontalContentAlignment="Center" Text="{Binding Entity.ObjectItem.Speed, Mode=TwoWay}" Margin="5" IsReadOnly="True" Background="WhiteSmoke"/>
-                    <Button Content="++" FontWeight="Bold" FontSize="14" Margin="5, 20, 5, 0" Command="{Binding SpeedIncCommand}"/>
-                    <Button Content="--" FontWeight="Bold" FontSize="14" Margin="5" Command="{Binding SpeedDecCommand}"/>
-                </StackPanel>
-            </DockPanel>
+                        <StackPanel>
+                            <TextBox Width="50" FontWeight="Bold" HorizontalContentAlignment="Center" Text="{Binding Entity.ObjectItem.Speed, Mode=TwoWay}" Margin="5" IsReadOnly="True" Background="WhiteSmoke"/>
+                            <Button Content="++" FontWeight="Bold" FontSize="14" Margin="5, 20, 5, 0" Command="{Binding SpeedIncCommand}"/>
+                            <Button Content="--" FontWeight="Bold" FontSize="14" Margin="5" Command="{Binding SpeedDecCommand}"/>
+                        </StackPanel>
+                    </DockPanel>
+                </Grid>
+            </TabItem>
             
-            <StackPanel Grid.Column="2" HorizontalAlignment="Stretch">
-                <DockPanel Margin="0,2,0,0">
-                    <Label Content="Max speed:" VerticalAlignment="Center" Width="75"/>
-                    <TextBox VerticalContentAlignment="Center" Height="25" Width="50" TextAlignment="Center" Text="{Binding Entity.ObjectItem.MaxSpeedPercentage, Mode=TwoWay}"/>
-                </DockPanel>
+            <TabItem Header="Properties">
+                <Grid VerticalAlignment="Top" IsEnabled="{Binding Entity.IsEnabled}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-                <DockPanel Margin="0,2,0,0">
-                    <Label Content="Block speed:" VerticalAlignment="Center" Width="75"/>
-                    <TextBox VerticalContentAlignment="Center" Height="25" Width="50" TextAlignment="Center" Text="{Binding Entity.ObjectItem.BlockSpeedPercentage, Mode=TwoWay}"/>
-                </DockPanel>
-            
-                <DockPanel VerticalAlignment="Center" HorizontalAlignment="Left">
-                    <ComboBox Margin="2" ItemsSource="{Binding Entity.ObjectItem.FncNames, Mode=OneWay}" SelectedItem="{Binding Entity.ObjectItem.FncSelectedName}" Width="50"/>
-                    <ComboBox Margin="0,2,2,2" Width="100" SelectedIndex="{Binding Entity.ObjectItem.FncTypeIndex}" ItemsSource="{Binding Entity.ObjectItem.FncTypeNames, Mode=OneWay}"/>
-                    <Button Name="CmdFncTypeSet" Content="SET" Click="CmdFncTypeSet_OnClick"/>
-                </DockPanel>
-            </StackPanel>
-        </Grid>
+                    <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left">
+                        <DockPanel Margin="0,2,0,0">
+                            <Label Content="Max speed:" VerticalAlignment="Center" Width="75"/>
+                            <TextBox VerticalContentAlignment="Center" Height="25" Width="50" TextAlignment="Center" Text="{Binding Entity.ObjectItem.MaxSpeedPercentage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </DockPanel>
 
+                        <DockPanel Margin="0,2,0,0">
+                            <Label Content="Block speed:" VerticalAlignment="Center" Width="75"/>
+                            <TextBox VerticalContentAlignment="Center" Height="25" Width="50" TextAlignment="Center" Text="{Binding Entity.ObjectItem.BlockSpeedPercentage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </DockPanel>
+                    </StackPanel>
+
+                    <DockPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,10,0,0">
+                        <ComboBox Margin="2" ItemsSource="{Binding Entity.ObjectItem.FncNames, Mode=OneWay}" SelectedItem="{Binding Entity.ObjectItem.FncSelectedName}" Width="50"/>
+                        <ComboBox Margin="0,2,2,2" Width="100" SelectedIndex="{Binding Entity.ObjectItem.FncTypeIndex}" ItemsSource="{Binding Entity.ObjectItem.FncTypeNames, Mode=OneWay}"/>
+                        <Button Name="CmdFncTypeSet" Content="SET" Click="CmdFncTypeSet_OnClick"/>
+                    </DockPanel>
+                    
+                    <StackPanel Grid.Row="0" Grid.RowSpan="2" Grid.Column="1">
+                        <Border BorderThickness="1"
+                                BorderBrush="#FF000000"
+                                VerticalAlignment="Top">
+                            <Image MinWidth="150" MinHeight="100" MaxWidth="210" MaxHeight="150" Source="{Binding Entity.LocomotiveImage}"/>
+                        </Border>
+                        <Button Name="BtnAddImage" Content="Add image..." Width="90" HorizontalAlignment="Left" Margin="3" Click="BtnAddImage_Click"/>
+                    </StackPanel>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        
         <DockPanel Grid.Row="2" IsEnabled="{Binding Entity.IsEnabled}">
-            <Button Content="STOP" Margin="10,0,00,0" FontWeight="Bold" FontSize="14" Height="35" Width="50" HorizontalAlignment="Left" Command="{Binding StopCommand}"/>
+            <ToggleButton Margin="10,0,0,0" FontWeight="Bold" Height="34" Width="34" HorizontalAlignment="Center" Command="{Binding StopCommand}" ToolTip="Stops this train">
+                <xamlMagic:AutoGreyableImage Width="22" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" Source="/RailwayEssential;component/Resources/locstop.png"/>
+            </ToggleButton>
+                        
             <DockPanel HorizontalAlignment="Left" Margin="170,0,0,0">
                 <ToggleButton Content="&lt;&lt;" Margin="0,0,5,0" FontWeight="Bold" FontSize="14" Height="35" Width="35" IsChecked="{Binding Entity.DriveBackward, Mode=TwoWay}"/>
                 <ToggleButton Content=">>" Margin="0,0,10,0" FontWeight="Bold" FontSize="14" Height="35" Width="35" IsChecked="{Binding Entity.DriveForward, Mode=TwoWay}"/>
